policy/rag-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rag-http-route
  namespace: default
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: rag
    port: 80
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: rag-v1
      kind: Service
      port: 80
      weight: 67
    - name: rag-v2
      kind: Service
      port: 80
      weight: 33
  - matches:
    - headers:
      - name: canary
        value: "true"
    backendRefs:
    - name: rag-v2
      kind: Service
      port: 80
